李强平台提交

--- a/lq-plat-link-web/src/main/resources/application-prod.yml
+++ b/lq-plat-link-web/src/main/resources/application-prod.yml
@@ -9,8 +9,8 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://47.93.60.223:3306/test?useUnicode=true&useSSL=false
 #    url: jdbc:mysql://47.93.60.223:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    username: root
-    password: LIqiang@123
+    username:
+    password:
   jpa:
     hibernate:
       ddl-auto: update
