--- a/lq-plat-link-web/src/main/resources/conf/conf-fdfs.properties
+++ b/lq-plat-link-web/src/main/resources/conf/conf-fdfs.properties
@@ -4,4 +4,4 @@ charset = UTF-8
 http.tracker_http_port = 20000
 http.anti_steal_token = no
 http.secret_key= FastDFS1234567890
-tracker_server=47.93.60.223:22122
+tracker_server=
