--- a/lq-plat-link-web/src/main/resources/application-prod.yml
+++ b/lq-plat-link-web/src/main/resources/application-prod.yml
@@ -7,9 +7,10 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql:///test?useUnicode=true&useSSL=false
-    username:
-    password:
+    url: jdbc:mysql://47.93.60.223:3306/test?useUnicode=true&useSSL=false
+#    url: jdbc:mysql://47.93.60.223:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    username: root
+    password: LIqiang@123
   jpa:
     hibernate:
       ddl-auto: update
@@ -33,6 +34,11 @@ pzx:
 
 
 rongyun:
-  appkey:
-  appsecret:
+  appkey: tdrvipksthb85
+  appsecret: 3vlyPcOTuAIdmi
 
+#springfox:
+#  documentation:
+#    swagger:
+#      v2:
+#        path: /api-docs   这个主要是提供api json数据，方便日后做开放平台时调用
